--- a/book/book/src/main/webapp/WEB-INF/web.xml
+++ b/book/book/src/main/webapp/WEB-INF/web.xml
@@ -11,9 +11,15 @@
   </welcome-file-list>
 <!-- spring dispatcher을 등록 - 서블릿 등록 - 서블릿 등록을 xml파일을 이용하여 bean생성 -->
 <servlet>
-<servlet-name>dispatcher</servlet-name>
-<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <servlet-name>dispatcher</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
 </servlet>
+
 <servlet-mapping>
 <servlet-name>dispatcher</servlet-name>
 <url-pattern>/</url-pattern>
